datafusion/physical-plan/src/match_recognize/snapshots/group_single_a.snap
---
source: datafusion/physical-plan/src/match_recognize/pattern_matcher.rs
expression: (A)
---
0: A->1
1*:
