datafusion/physical-plan/src/match_recognize/snapshots/permute_a.snap
---
source: datafusion/physical-plan/src/match_recognize/pattern_matcher.rs
expression: PERMUTE(A)
---
0: A->1
1*:
