datafusion/physical-plan/src/match_recognize/snapshots/permute_abcde.snap
---
source: datafusion/physical-plan/src/match_recognize/pattern_matcher.rs
expression: "PERMUTE(A,B,C,D,E)"
---
0: A->1 | B->2 | C->3 | D->4 | E->5
1: B->6 | C->7 | D->8 | E->9
2: A->6 | C->10 | D->11 | E->12
3: A->7 | B->10 | D->13 | E->14
4: A->8 | B->11 | C->13 | E->15
5: A->9 | B->12 | C->14 | D->15
6: C->16 | D->17 | E->18
7: B->16 | D->19 | E->20
8: B->17 | C->19 | E->21
9: B->18 | C->20 | D->21
10: A->16 | D->22 | E->23
11: A->17 | C->22 | E->24
12: A->18 | C->23 | D->24
13: A->19 | B->22 | E->25
14: A->20 | B->23 | D->25
15: A->21 | B->24 | C->25
16: D->26 | E->27
17: C->26 | E->28
18: C->27 | D->28
19: B->26 | E->29
20: B->27 | D->29
21: B->28 | C->29
22: A->26 | E->30
23: A->27 | D->30
24: A->28 | C->30
25: A->29 | B->30
26: E->31
27: D->31
28: C->31
29: B->31
30: A->31
31*:
