datafusion/physical-plan/src/match_recognize/snapshots/single_symbol.snap
---
source: datafusion/physical-plan/src/match_recognize/pattern_matcher.rs
expression: A
---
0: A->1
1*:
